--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -87,6 +87,11 @@
   </div>
 
   <div>
+    <%= form.label :active, style: "display: block" %>
+    <%= form.check_box :active %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
