add title field to document

--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div>
+    <%= form.label :title, style: "display: block" %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div>
     <%= form.label :when, style: "display: block" %>
     <%= form.date_field :when %>
   </div>
