--- a/app/views/documents/_document.html.erb
+++ b/app/views/documents/_document.html.erb
@@ -10,6 +10,11 @@
   </p>
 
   <p>
+    <strong>Title:</strong>
+    <%= document.title %>
+  </p>
+
+  <p>
     <strong>When:</strong>
     <%= document.when %>
   </p>
