--- a/app/views/departments/_department.html.erb
+++ b/app/views/departments/_department.html.erb
@@ -1,17 +1,14 @@
 <div id="<%= dom_id department %>">
-  <p>
-    <strong>Name:</strong>
-    <%= department.name %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= department.description %>
-  </p>
-
-  <p>
+  <div class="form-group">
+    <label for="name"><strong>Name</strong></label>
+    <input class="form-control" type="text" id="name" value="<%= department.name %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="name"><strong>Description</strong></label>
+    <input class="form-control" type="text" id="name" value="<%= department.description %>" readonly>
+  </div>
+  <p class="mt-3">
     <strong>Avatar:</strong>
     <%= link_to department.avatar.filename, department.avatar if department.avatar.attached? %>
   </p>
-
 </div>
