--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -2,7 +2,6 @@
   <% if department.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(department.errors.count, "error") %> prohibited this department from being saved:</h2>
-
       <ul>
         <% department.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,23 +9,19 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
+  <div class="form-group">
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: 'form-control' %>
   </div>
-
-  <div>
+  <div class="form-group mt-3">
     <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control' %>
   </div>
-
-  <div>
+  <div class="form-group mt-3">
     <%= form.label :avatar, style: "display: block" %>
-    <%= form.file_field :avatar %>
+    <%= form.file_field :avatar, class: 'form-control' %>
   </div>
-
-  <div>
-    <%= form.submit %>
+  <div class="form-group mt-3">
+    <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
