--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing department</h1>
-
-<%= render "form", department: @department %>
-
-<br>
-
-<div>
-  <%= link_to "Show this department", @department %> |
-  <%= link_to "Back to departments", departments_path %>
+<div class="card mt-3">
+  <h1 class="card-header">Department</h1>
+  <div class="card-body">
+    <%= render "form", department: @department %>
+  </div>
 </div>
