--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @department %>
-
-<div>
-  <%= link_to "Edit this department", edit_department_path(@department) %> |
-  <%= link_to "Back to departments", departments_path %>
-
-  <%= button_to "Destroy this department", @department, method: :delete %>
+<div class="card">
+  <h1 class="card-header">Department</h1>
+  <div class="card-body">
+    <%= render @department %>
+    <div>
+      <%= link_to "Back to departments", departments_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
 </div>
