add sign in link and department style refactor

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,11 @@
           <%= link_to "Payments", payments_path, class: 'nav-link' %>
         </li>
       </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <%= link_to "Sign in", root_path, class: 'nav-link' %>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
