--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -26,8 +26,8 @@
               <td><%= image_tag department.avatar, width: '50' %></td>
               <td><%= department.name %></td>
               <td><%= department.description %></td>
-              <td><%= link_to "Show", department, class: 'btn btn-outline-success' %></td>
-              <td><%= link_to "Edit", edit_department_path(department), class: 'btn btn-outline-secondary' %></td>
+              <td><%= link_to "Show", department, class: 'btn btn-outline-info' %></td>
+              <td><%= link_to "Edit", edit_department_path(department), class: 'btn btn-outline-warning' %></td>
               <td><%= link_to "Destroy", department, class: 'btn btn-outline-danger', data: {turbo_method: :delete, turbo_confirm: "Are you sure to delete #{department.name}?"} %></td>
             </tr>
           <% end %>
