--- a/app/views/departments/_department.html.erb
+++ b/app/views/departments/_department.html.erb
@@ -1,5 +1,6 @@
 <div id="<%= dom_id department %>">
-  <div class="form-group">
+  <%= image_tag department.avatar, width: '100', style: 'center' if department.avatar.attached? %>
+  <div class="form-group mt-3">
     <label for="name"><strong>Name</strong></label>
     <input class="form-control" type="text" id="name" value="<%= department.name %>" readonly>
   </div>
@@ -8,7 +9,29 @@
     <input class="form-control" type="text" id="name" value="<%= department.description %>" readonly>
   </div>
   <p class="mt-3">
-    <strong>Avatar:</strong>
-    <%= link_to department.avatar.filename, department.avatar if department.avatar.attached? %>
+    <strong>Associated users:</strong>
+    <%= department.users.count %>
   </p>
+  <% if department.users.count > 0 %>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Phone</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% department.users.each do |user| %>
+          <tr>
+            <td><%= user.name %></td>
+            <td><%= user.age %></td>
+            <td><%= user.phone %></td>
+            <td><%= link_to "Show", user, class: 'btn btn-outline-info' %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% end %>
 </div>
