--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <%= link_to "Sign in", root_path, class: 'nav-link' %>
+          <%= link_to "Sign out", root_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
