--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,82 +1,63 @@
 <div id="<%= dom_id user %>">
-  <p>
-    <strong>Name:</strong>
-    <%= user.name %>
-  </p>
-
-  <p>
-    <strong>Cpf:</strong>
-    <%= user.cpf %>
-  </p>
-
-  <p>
-    <strong>Email:</strong>
-    <%= user.email %>
-  </p>
-
-  <p>
-    <strong>Phone:</strong>
-    <%= user.phone %>
-  </p>
-
-  <p>
-    <strong>Zipcode:</strong>
-    <%= user.zipcode %>
-  </p>
-
-  <p>
-    <strong>Address:</strong>
-    <%= user.address %>
-  </p>
-
-  <p>
-    <strong>Address number:</strong>
-    <%= user.address_number %>
-  </p>
-
-  <p>
-    <strong>Address opt:</strong>
-    <%= user.address_opt %>
-  </p>
-
-  <p>
-    <strong>Birthday:</strong>
-    <%= user.birthday %>
-  </p>
-
-  <p>
-    <strong>Member:</strong>
-    <%= user.member %>
-  </p>
-
-  <p>
-    <strong>Member at:</strong>
-    <%= user.member_at %>
-  </p>
-
-  <p>
-    <strong>Office:</strong>
-    <%= user.office %>
-  </p>
-
-  <p>
-    <strong>Department:</strong>
-    <%= user.department_id %>
-  </p>
-
-  <p>
-    <strong>Avatar:</strong>
-    <%= link_to user.avatar.filename, user.avatar if user.avatar.attached? %>
-  </p>
-
-  <p>
-    <strong>About:</strong>
-    <%= user.about %>
-  </p>
-
-  <p>
-    <strong>Active:</strong>
-    <%= user.active %>
-  </p>
-
+  <%= image_tag user.avatar, width: '100', class: 'mx-auto d-block' if user.avatar.attached? %>
+  <div class="form-group mt-3">
+    <label for="name"><strong>Name</strong></label>
+    <input class="form-control" type="text" id="name" value="<%= user.name %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="name"><strong>Cpf</strong></label>
+    <input class="form-control" type="text" id="cpf" value="<%= user.cpf %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="email"><strong>Email</strong></label>
+    <input class="form-control" type="text" id="email" value="<%= user.email %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="phone"><strong>Phone</strong></label>
+    <input class="form-control" type="text" id="phone" value="<%= user.phone %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="zipcode"><strong>Zipcode</strong></label>
+    <input class="form-control" type="text" id="zipcode" value="<%= user.zipcode %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="address"><strong>Address</strong></label>
+    <input class="form-control" type="text" id="address" value="<%= user.address %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="address_number"><strong>Address number</strong></label>
+    <input class="form-control" type="text" id="address_number" value="<%= user.address_number %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="address_opt"><strong>Address optional</strong></label>
+    <input class="form-control" type="text" id="address_opt" value="<%= user.address_opt %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="birthday"><strong>Birthday</strong></label>
+    <input class="form-control" type="text" id="birthday" value="<%= user.birthday %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="member"><strong>Member</strong></label>
+    <input class="form-control" type="text" id="member" value="<%= user.member %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="member_at"><strong>Member at</strong></label>
+    <input class="form-control" type="text" id="member_at" value="<%= user.member_at %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="office"><strong>Office</strong></label>
+    <input class="form-control" type="text" id="office" value="<%= user.office %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="department_id"><strong>Department</strong></label>
+    <input class="form-control" type="text" id="department_id" value="<%= user.department.name %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="about"><strong>About</strong></label>
+    <input class="form-control" type="text" id="about" value="<%= user.about %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="active"><strong>Active</strong></label>
+    <input class="form-control" type="text" id="active" value="<%= user.active %>" readonly>
+  </div>
 </div>
