--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing user</h1>
-
-<%= render "form", user: @user %>
-
-<br>
-
-<div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
+<div class="card mt-3">
+  <h1 class="card-header">User</h1>
+  <div class="card-body">
+    <%= render "form", user: @user %>
+  </div>
 </div>
