--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @user %>
-
-<div>
-  <%= link_to "Edit this user", edit_user_path(@user) %> |
-  <%= link_to "Back to users", users_path %>
-
-  <%= button_to "Destroy this user", @user, method: :delete %>
+<div class="card">
+  <h1 class="card-header">User</h1>
+  <div class="card-body">
+    <%= render @user %>
+    <div class="mt-3">
+      <%= link_to "Back to users", users_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
 </div>
