--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,6 +32,7 @@
             <% end %>
           </tbody>
         </table>
+        <%== pagy_bootstrap_nav(@pagy) %>
       </div>
     <% end %>
   </div>
