--- a/app/views/documents/_document.html.erb
+++ b/app/views/documents/_document.html.erb
@@ -3,25 +3,20 @@
     <strong>File:</strong>
     <%= link_to document.file.filename, document.file if document.file.attached? %>
   </p>
-
-  <p>
-    <strong>Department:</strong>
-    <%= document.department_id %>
-  </p>
-
-  <p>
-    <strong>Title:</strong>
-    <%= document.title %>
-  </p>
-
-  <p>
-    <strong>When:</strong>
-    <%= document.when %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= document.description %>
-  </p>
-
+  <div class="form-group mt-3">
+    <label for="department"><strong>Department</strong></label>
+    <input class="form-control" type="text" id="department" value="<%= document.department.name %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="title"><strong>Title</strong></label>
+    <input class="form-control" type="text" id="title" value="<%= document.title %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="when"><strong>When</strong></label>
+    <input class="form-control" type="text" id="when" value="<%= document.when %>" readonly>
+  </div>
+  <div class="form-group mt-3">
+    <label for="description"><strong>Description</strong></label>
+    <input class="form-control" type="text" id="description" value="<%= document.description %>" readonly>
+  </div>
 </div>
