--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing document</h1>
-
-<%= render "form", document: @document %>
-
-<br>
-
-<div>
-  <%= link_to "Show this document", @document %> |
-  <%= link_to "Back to documents", documents_path %>
+<div class="card mt-3">
+  <h1 class="card-header">Document</h1>
+  <div class="card-body">
+    <%= render "form", document: @document %>
+  </div>
 </div>
