--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @document %>
-
-<div>
-  <%= link_to "Edit this document", edit_document_path(@document) %> |
-  <%= link_to "Back to documents", documents_path %>
-
-  <%= button_to "Destroy this document", @document, method: :delete %>
+<div class="card">
+  <h1 class="card-header">Document</h1>
+  <div class="card-body">
+    <%= render @document %>
+    <div class="mt-3">
+      <%= link_to "Back to documents", documents_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
 </div>
