--- a/app/views/incomes/new.html.erb
+++ b/app/views/incomes/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New income</h1>
-
-<%= render "form", income: @income %>
-
-<br>
-
-<div>
-  <%= link_to "Back to incomes", incomes_path %>
+<div class="card mt-3">
+  <h1 class="card-header">Income</h1>
+  <div class="card-body">
+    <%= render "form", income: @income %>
+  </div>
 </div>
