--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing payment</h1>
-
-<%= render "form", payment: @payment %>
-
-<br>
-
-<div>
-  <%= link_to "Show this payment", @payment %> |
-  <%= link_to "Back to payments", payments_path %>
+<div class="card mt-3">
+  <h1 class="card-header">Payment</h1>
+  <div class="card-body">
+    <%= render "form", payment: @payment %>
+  </div>
 </div>
