--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @payment %>
-
-<div>
-  <%= link_to "Edit this payment", edit_payment_path(@payment) %> |
-  <%= link_to "Back to payments", payments_path %>
-
-  <%= button_to "Destroy this payment", @payment, method: :delete %>
+<div class="card">
+  <h1 class="card-header">Payment</h1>
+  <div class="card-body">
+    <%= render @payment %>
+    <div class="mt-3">
+      <%= link_to "Back to payments", payments_path, class: 'btn btn-secondary' %>
+    </div>
+  </div>
 </div>
