--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="card mt-3 mb-3">
+  <h1 class="card-header">Balance</h1>
+  <div class="card-body">
+    <% if @balance > 0 %>
+      <p class="card-text text-primary"><%= "R$ #{@balance}" %></p>
+    <% else %>
+      <p class="card-text text-danger"><%= "R$ #{@balance}" %></p>
+    <% end %>
+  </div>
+</div>
+<div class="card mt-3 mb-3">
+  <h1 class="card-header">Incomes</h1>
+  <div class="card-body">
+    <p>Amount by month</p>
+    <%= line_chart Income.group_by_month(:when).sum(:amount) %>
+    <p class="mt-3">Amount by kind</p>
+    <%= pie_chart Income.group(:kind).sum(:amount) %>
+  </div>
+</div>
+<div class="card mt-3 mb-3">
+  <h1 class="card-header">Payments</h1>
+  <div class="card-body">
+    <p>Amount by month</p>
+    <%= column_chart Payment.group_by_month(:when, format: "%b %Y").sum(:amount) %>
+    <p class="mt-3">Amount by kind</p>
+    <%= pie_chart Payment.group(:kind).sum(:amount) %>
+  </div>
+</div>
