--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,17 +12,17 @@
   <h1 class="card-header">Incomes</h1>
   <div class="card-body">
     <p>Amount by month</p>
-    <%= line_chart Income.group_by_month(:when).sum(:amount) %>
+    <%= line_chart @income_sum_by_month %>
     <p class="mt-3">Amount by kind</p>
-    <%= pie_chart Income.group(:kind).sum(:amount) %>
+    <%= pie_chart @income_sum_by_kind %>
   </div>
 </div>
 <div class="card mt-3 mb-3">
   <h1 class="card-header">Payments</h1>
   <div class="card-body">
     <p>Amount by month</p>
-    <%= column_chart Payment.group_by_month(:when, format: "%b %Y").sum(:amount) %>
+    <%= column_chart @payment_sum_by_month %>
     <p class="mt-3">Amount by kind</p>
-    <%= pie_chart Payment.group(:kind).sum(:amount) %>
+    <%= pie_chart @payment_sum_by_kind %>
   </div>
 </div>
