--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="card mt-3 mb-3">
-  <h1 class="card-header">Balance</h1>
+  <h1 class="card-header"><%= I18n.t("home.index.balance") %></h1>
   <div class="card-body">
     <% if @balance > 0 %>
       <p class="card-text text-primary"><%= "R$ #{@balance}" %></p>
@@ -9,20 +9,20 @@
   </div>
 </div>
 <div class="card mt-3 mb-3">
-  <h1 class="card-header">Incomes</h1>
+  <h1 class="card-header"><%= I18n.t("home.index.incomes") %></h1>
   <div class="card-body">
-    <p>Amount by month</p>
+    <p><%= I18n.t("home.index.amount_by_month") %></p>
     <%= line_chart @income_sum_by_month %>
-    <p class="mt-3">Amount by kind</p>
+    <p class="mt-3"><%= I18n.t("home.index.amount_by_kind") %></p>
     <%= pie_chart @income_sum_by_kind %>
   </div>
 </div>
 <div class="card mt-3 mb-3">
-  <h1 class="card-header">Payments</h1>
+  <h1 class="card-header"><%= I18n.t("home.index.payments") %></h1>
   <div class="card-body">
-    <p>Amount by month</p>
+    <p><%= I18n.t("home.index.amount_by_month") %></p>
     <%= column_chart @payment_sum_by_month %>
-    <p class="mt-3">Amount by kind</p>
+    <p class="mt-3"><%= I18n.t("home.index.amount_by_kind") %></p>
     <%= pie_chart @payment_sum_by_kind %>
   </div>
 </div>
