--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,27 +7,27 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to t("header.home"), root_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.home"), root_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to t("header.deparments"), departments_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.departments"), departments_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to t("header.users"), users_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.users"), users_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to t("header.documents"), documents_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.documents"), documents_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to t("header.incomes"), incomes_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.incomes"), incomes_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to t("header.payments"), payments_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.payments"), payments_path, class: 'nav-link' %>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <%= link_to t("header.sign_out"), root_path, class: 'nav-link' %>
+          <%= link_to I18n.t("header.sign_out"), root_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
