--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <%= link_to I18n.t("header.payments"), payments_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to I18n.t("header.events"), events_path, class: 'nav-link' %>
+        </li>
       </ul>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
