--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -3,25 +3,20 @@
     <strong>Title:</strong>
     <%= event.title %>
   </p>
-
   <p>
     <strong>Description:</strong>
     <%= event.description %>
   </p>
-
   <p>
     <strong>Start date:</strong>
-    <%= event.start_date %>
+    <%= event.start_time %>
   </p>
-
   <p>
     <strong>End date:</strong>
-    <%= event.end_date %>
+    <%= event.end_time %>
   </p>
-
   <p>
     <strong>Department:</strong>
     <%= event.department_id %>
   </p>
-
 </div>
