--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,7 +2,6 @@
   <% if event.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
       <ul>
         <% event.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -10,32 +9,26 @@
       </ul>
     </div>
   <% end %>
-
   <div>
     <%= form.label :title, style: "display: block" %>
     <%= form.text_field :title %>
   </div>
-
   <div>
     <%= form.label :description, style: "display: block" %>
     <%= form.text_field :description %>
   </div>
-
   <div>
-    <%= form.label :start_date, style: "display: block" %>
-    <%= form.datetime_field :start_date %>
+    <%= form.label :start_time, style: "display: block" %>
+    <%= form.datetime_field :start_time %>
   </div>
-
   <div>
-    <%= form.label :end_date, style: "display: block" %>
-    <%= form.datetime_field :end_date %>
+    <%= form.label :end_time, style: "display: block" %>
+    <%= form.datetime_field :end_time %>
   </div>
-
   <div>
     <%= form.label :department_id, style: "display: block" %>
     <%= form.text_field :department_id %>
   </div>
-
   <div>
     <%= form.submit %>
   </div>
