--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,14 +1,31 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Events</h1>
-
-<div id="events">
-  <% @events.each do |event| %>
-    <%= render event %>
-    <p>
-      <%= link_to "Show this event", event %>
-    </p>
-  <% end %>
+<div class="card">
+  <div class="card-header">
+    <h1>Events</h1>
+  </div>
+  <div class="card-body">
+    <!--
+    <div id="events">
+      <% @events.each do |event| %>
+        <%= render event %>
+        <p>
+          <%= link_to "Show this event", event %>
+        </p>
+      <% end %>
+    </div>
+    -->
+    <%= link_to "New event", new_event_path, class: 'btn btn-primary' %>
+    <div class="text-center mt-3">
+      <%= month_calendar(events: @events) do |date, events| %>
+        <%= date.day %>
+        <% events.each do |event| %>
+          <div>
+            <p>
+              <%= link_to "#{event.title} às #{event.start_time.strftime('%H:%M')}", event, class: 'btn btn-success' %>
+            </p>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New event", new_event_path %>
