--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -9,27 +9,27 @@
       </ul>
     </div>
   <% end %>
-  <div>
+  <div class="form-group">
     <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group mt-3">
     <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group mt-3">
     <%= form.label :start_time, style: "display: block" %>
-    <%= form.datetime_field :start_time %>
+    <%= form.datetime_field :start_time, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group mt-3">
     <%= form.label :end_time, style: "display: block" %>
-    <%= form.datetime_field :end_time %>
+    <%= form.datetime_field :end_time, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group mt-3">
     <%= form.label :department_id, style: "display: block" %>
-    <%= form.text_field :department_id %>
+    <%= form.select(:department_id, options_for_select(Department.options_list), {}, class: 'form-select') %>
   </div>
-  <div>
-    <%= form.submit %>
+  <div class="form-group mt-3">
+    <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
