--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,10 +1,6 @@
-<h1>Editing event</h1>
-
-<%= render "form", event: @event %>
-
-<br>
-
-<div>
-  <%= link_to "Show this event", @event %> |
-  <%= link_to "Back to events", events_path %>
+<div class="card mt-3">
+  <h1 class="card-header">Event</h1>
+  <div class="card-body">
+    <%= render "form", event: @event %>
+  </div>
 </div>
