--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,16 +4,6 @@
     <h1>Events</h1>
   </div>
   <div class="card-body">
-    <!--
-    <div id="events">
-      <% @events.each do |event| %>
-        <%= render event %>
-        <p>
-          <%= link_to "Show this event", event %>
-        </p>
-      <% end %>
-    </div>
-    -->
     <%= link_to "New event", new_event_path, class: 'btn btn-primary' %>
     <div class="text-center mt-3">
       <%= month_calendar(events: @events) do |date, events| %>
@@ -21,7 +11,11 @@
         <% events.each do |event| %>
           <div>
             <p>
-              <%= link_to "#{event.title} às #{event.start_time.strftime('%H:%M')}", event, class: 'btn btn-success' %>
+              <% if event.end_time < Time.now %>
+                <%= link_to "#{event.title} às #{event.start_time.strftime('%H:%M')}", event, class: 'btn btn-secondary' %>
+              <% else %>
+                <%= link_to "#{event.title} às #{event.start_time.strftime('%H:%M')}", event, class: 'btn btn-success' %>
+              <% end %>
             </p>
           </div>
         <% end %>
