--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New event</h1>
-
-<%= render "form", event: @event %>
-
-<br>
-
-<div>
-  <%= link_to "Back to events", events_path %>
+<div class="card mt-3">
+  <h1 class="card-header">Event</h1>
+  <div class="card-body">
+    <%= render "form", event: @event %>
+  </div>
 </div>
