--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,12 @@
 <p style="color: green"><%= notice %></p>
-
-<%= render @event %>
-
-<div>
-  <%= link_to "Edit this event", edit_event_path(@event) %> |
-  <%= link_to "Back to events", events_path %>
-
-  <%= button_to "Destroy this event", @event, method: :delete %>
+<div class="card">
+  <h1 class="card-header">Event</h1>
+  <div class="card-body">
+    <%= render @event %>
+    <div class="mt-3">
+      <%= link_to "Back to events", events_path, class: 'btn btn-secondary' %>
+      <%= link_to "Edit", edit_event_path(@event), class: 'btn btn-warning' %>
+      <%= link_to "Destroy", @event, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: "Are you sure to delete #{@event.title}?"} %>
+    </div>
+  </div>
 </div>
