--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -59,7 +59,7 @@
   </div>
   <div class="form-group mt-3">
     <%= form.label :department_id, style: "display: block" %>
-    <%= form.select(:department_id, options_for_select(User.options_for_department), {}, class: 'form-select') %>
+    <%= form.select(:department_id, options_for_select(Department.options_list), {}, class: 'form-select') %>
   </div>
   <div class="form-group mt-3">
     <%= form.label :avatar, style: "display: block" %>
