--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="card-body">
     <%= link_to "New event", new_event_path, class: 'btn btn-primary' %>
-    <div class="text-center mt-3">
+    <div class="mt-3">
       <%= month_calendar(events: @events) do |date, events| %>
         <%= date.day %>
         <% events.each do |event| %>
