--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,34 +5,42 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to I18n.t("header.home"), root_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to I18n.t("header.departments"), departments_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to I18n.t("header.users"), users_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to I18n.t("header.documents"), documents_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to I18n.t("header.incomes"), incomes_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to I18n.t("header.payments"), payments_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to I18n.t("header.events"), events_path, class: 'nav-link' %>
-        </li>
-      </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <%= link_to I18n.t("header.sign_out"), root_path, class: 'nav-link' %>
-        </li>
-      </ul>
+      <% if admin_signed_in? %>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <%= link_to I18n.t("header.home"), root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to I18n.t("header.departments"), departments_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to I18n.t("header.users"), users_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to I18n.t("header.documents"), documents_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to I18n.t("header.incomes"), incomes_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to I18n.t("header.payments"), payments_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to I18n.t("header.events"), events_path, class: 'nav-link' %>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <%= link_to I18n.t("header.sign_out"), destroy_admin_session_path, data: { turbo_method: :delete }, class: 'nav-link' %>
+          </li>
+        </ul>
+      <% else %>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <%= link_to I18n.t("header.sign_in"), new_admin_session_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      <% end %>
     </div>
   </div>
 </nav>
