--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <p class="notice"><%= notice %></p>
-          <p class="alert"><%= alert %></p>
+          <p class="notice text-center text-success"><%= notice %></p>
+          <p class="alert text-center text-danger"><%= alert %></p>
           <%= yield %>
         </div>
       </div>
